syntax ="proto3";

package notifyPackage;

service notify{
    rpc createPost(post) returns (ack) {};
    //
    rpc createAlert(alert) returns (ack) {};
    rpc updateAlert(alert) returns (ack) {};
    rpc getAlert(userName) returns (stream alert) {};
    //
    rpc getNotifies(userName) returns (stream post) {};
    //
    rpc deleteAlert(id) returns (ack) {};
}

message ack{
    bool ack=1;
}
message id{
    string id=1;
}
message post{
    string jobName=1;
    string companyName=2;
    string location=3;
}
message alert{
    string id=1;
    repeated string keyword=2;
    string city=3;
    float radius=4;
    string userName=5;
    bool on=6;
}
message userName{
    string userName=1;
}
message noParam{}